creusot/tests/should_fail/ghost/mutate_in_program.stderr
error: dereference of a ghost variable in program context
 --> mutate_in_program.rs:6:5
  |
6 |     *g = 3;
  |     ^^

error: aborting due to 1 previous error

